# web

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  Dockerfile  Dockerfile.prod  Pipfile  Procfile  docker-compose.build.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  env_secrets_expand.sh  install-postgres-11.sh  manage.py  pyproject.toml  requirements  requirements.txt
.configs/nginx/: codeshepherds.prod.nginx  nginx.conf  nginx.prod.conf  repo.nginx  repo.prod.nginx  solder.prod.nginx  up.prod.nginx
accounts/: admin.py  forms.py  url.py  urls.py  views.py
analytics/: models.py
analytics/migrations/: 0001_initial.py  0002_auto_20190204_1238.py
app/analytics/: admin.py  tests.py
app/codeshepherds/: urls.py
app/home/: views.py
app/party/: tests.py  views.py
app/shortener/: validators.py
app/testing/: admin.py
assets/css/: main.css
assets/js/: main.js
base/: forms.py  models.py  urls.py  views.py
base/forms/: forms.py
base/migrations/: 0001_initial.py
chat/: urls.py  views.py
chirp/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
chirp-react/: package-lock.json  package.json
chirp-react/src/: App.js
chirp/api/: routers.py  serializers.py  views.py
chirp/migrations/: 0001_initial.py
codeshepherds/: __init__.py  api.py  settings.py  urls.py  wsgi.py
codeshepherds/api/: paginators.py  routers.py
codeshepherds/settings/: __init__.py  apps_custom_settings.py  auth.py  database.py  debug.py  django.py  email.py  installed_apps.py  logging.py  media.py  static_files.py  templates.py
configs/nginx/: nginx.conf  nginx.prod.conf
configurator/: Pipfile  setup.py
configurator/configurator/: __init__.py  app.py
cookbook/: services.py  urls.py
cookbook/migrations/: 0001_initial.py
core/: exceptions.py  send_mail.py  tests.py  tokens.py  utils.py
forum/: models.py
forum/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json  urls.py  views.py  webpack.config.js
frontend/src/: App.js  index.js
history/: models.py
history/migrations/: 0001_initial.py  0002_auto_20210206_1823.py
home/: tests.py  views.py
home/templates/: welcome.html
main/: urls.py  views.py
main/templates/: welcome.html
nginx/: nginx.conf
packager/: apps.py
party/: apps.py  models.py  serializers.py  urls.py  views.py
party/api/: routers.py  serializers.py  views.py
party/migrations/: 0001_initial.py  0002_auto_20160715_1711.py
profiles/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
profiles/api/: routers.py  serializers.py  views.py
profiles/migrations/: 0001_initial.py  0002_create_super_user.py
settings/: base.py  dev_leo.py  production.py
shortener/: admin.py  converters.py  forms.py  models.py  urls.py  utils.py  views.py
shortener/migrations/: 0001_initial.py  0002_auto_20190210_0958.py
templates/: main.html  navbar.html
templates/account/: auth.html  signup.html  (+5 more)
testing/: forms.py  models.py  urls.py  views.py
thumbnailer/: urls.py
web/: .dockerignore  Dockerfile  Dockerfile.prod  Pipfile  entrypoint.celery.sh  entrypoint.prod.sh  entrypoint.sh  pyproject.toml
web/account/: urls.py  views.py
web/assets/js/thumbnailer/: home.js
web/base/fixtures/: initial_data.json
web/base/migrations/: 0002_auto_20191222_0420.py
web/chat/: consumers.py  routing.py  tests.py  urls.py  views.py
web/codeshepherds/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
web/cookbook/: admin.py  models.py  views.py
web/cookbook/fixtures/: initial_data.json
web/core/: utils.py
web/iex/: apps.py
web/packager/: models.py
web/party/: models.py  tests.py
web/settings/: __init__.py  settings.py
web/settings/management/commands/: save_config.py
web/shortener/: converters.py  models.py  views.py
web/templates/: favicon.html  main.html  navbar.html
web/templates/chat/: index.html
web/templates/cookbook/: recipes.html
web/templates/home/: welcome.html
web/templates/shortener/: exists.html  shortener_home.html  success.html
web/templates/thumbnailer/: home.html
web/testing/: forms.py  views.py
web/testing/migrations/: 0001_initial.py
web/thumbnailer/: tasks.py  urls.py  views.py
(+69 files in other folders)
