[tool.poetry]
name = "codeshepherds"
version = "0.7.3"
description = "Webpage of codeshepherds"
authors = ["Leopoldo Parra <lparra.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.4"
cryptography = "^2.8"
djangorestframework = "^3.11.0"
pillow = "^7.0.0"
psycopg2-binary = "^2.8.4"
geoip2 = "^3.0.0"
django-ipware = "^2.1.0"
gunicorn = "^20.0.4"
django-heroku = "^0.3.1"
django-bootstrap4 = "^1.1.1"
django-icons = "^1.1.2"
dropbox = "^9.5.0"
colorama = "^0.4.3"
django-extensions = "^2.2.9"
pygraphviz = "^1.5"
werkzeug = "^1.0.0"
sentry-sdk = "^0.14.3"
redis = "^3.4.1"
celery = "^4.4.2"
django-widget-tweaks = "^1.4.8"
django-debug-toolbar = "^2.2"
django-redis-cache = "^2.1.0"
hiredis = "^1.0.1"
whitenoise = "^5.0.1"
channels = "^2.4.0"
channels-redis = "^2.4.2"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
coverage = "^5.0.4"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
