[tool.poetry]
name = "codeshepherds"
version = "0.7.3"
description = "Webpage of codeshepherds"
authors = ["Leopoldo Parra <lparra.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "*"
cryptography = "*"
djangorestframework = "*"
pillow = "*"
psycopg2-binary = "*"
geoip2 = "*"
django-ipware = "*"
gunicorn = "*"
django-heroku = "*"
django-bootstrap4 = "*"
django-icons = "*"
dropbox = "*"
colorama = "*"
django-extensions = "*"
pygraphviz = "*"
werkzeug = "*"
sentry-sdk = "*"
redis = "*"
celery = "*"
django-widget-tweaks = "*"
django-debug-toolbar = "*"
django-redis-cache = "*"
hiredis = "*"
whitenoise = "*"
channels = "*"
channels-redis = "*"
uvicorn = "*"

[tool.poetry.dev-dependencies]
coverage = "*"
flake8 = "*"
jupyter = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
